bugfix: fix barcode overflow in product content

--- a/scss/_off.scss
+++ b/scss/_off.scss
@@ -754,6 +754,7 @@ html[dir="rtl"] {
   border-radius: 8px;
   padding: 10px;
   display: block;
+  word-wrap: break-word;
 }
 
 #product_banner {
